public class iPhone implements AparelhoEletronico, NavegadorInternet, ReprodutorMusical{

    public static void main(String[] args) {
            }

    @Override
    public void atender() {
        // TODO Auto-generated method stub
     System.out.println("1. Atender o celular");   
    }

    @Override
    public void iniciarCorreioVoz() {
        // TODO Auto-generated method stub
        System.out.println("1. Iniciar Correio de Voz"); 
    }

    @Override
    public void ligar() {
        // TODO Auto-generated method stub
        System.out.println("3. Fazer Ligação"); 
    }

    @Override
    public void adicionarNovaAba() {
        // TODO Auto-generated method stub
        System.out.println("4. AdicionarNovaAba"); 
    }

    @Override
    public void atualizarPagina() {
        // TODO Auto-generated method stub
        System.out.println("5. Atualizar Página"); 
    }

    @Override
    public void exibirPagina() {
        // TODO Auto-generated method stub
        System.out.println("6.Exibir Página"); 
    }

    @Override
    public void tocar() {
        // TODO Auto-generated method stub
        System.out.println("9. Tocar"); 
    }

    @Override
    public void pausar() {
        // TODO Auto-generated method stub
        System.out.println("7. Pausar"); 
        
    }

    @Override
    public void selecionarMusica() {
        // TODO Auto-generated method stub
        System.out.println("8. Selecionar Musica"); 
        
    }

}





    