# desafiopoo-umliphone
## Desafio UML iPhone

@startuml



class iPhone
class ReprodutorMusical
class AparelhoTelefonico
class NavegadorInternet

iPhone --> ReprodutorMusical
iPhone --> AparelhoTelefonico
iPhone --> NavegadorInternet

class iPhone {
}

class ReprodutorMusical{
+"+"tocar()
+"+"pausar()
+"+"selecionarMusica(String musica)
}

class AparelhoTelefonico{
+"+"ligar(String numero)
+"+"atender()
+"+"iniciarCorreioVoz()
}

class NavegadorInternet{
+"+"exibirPagina(String url)
+"+"adicionarNovaAba()
+"+" atualizarPagina()
}

<img src="/desafiopoo-umliphone/img.png">






@enduml
